# AVS_G

./: README.md
AVS_MyWork/: combine.txt  old_result.txt  result_final.txt  关于联合概率编码的实验报告.docx
AVS_MyWork/code/: CMakeLists.txt  COMTXTCompress.cpp  COMTXTCompress.h  CombineCompress.cpp  DecodeWorker.cpp  DecodeWorker.h  EncodeWorker.cpp
old_avsg/: AcoCompress.cpp  AcoCompress.h  AlignInfo.cpp  AlignInfo.h  ArcFile.cpp  ArcFile.h  BlockParamElement.h  BlockParamProcess.cpp  BlockParamProcess.h  BufPool.cpp  BufPool.h  CMakeLists.txt  COMTXTCompress.cpp  COMTXTCompress.h  CombineCompress.cpp  CombineCompress.h  CommandParse.cpp  CommandParse.h  Context.cpp  Context.h  DecodePEWorker.cpp  DecodePEWorker.h  DecodePipeWorker.cpp  DecodePipeWorker.h  DecodeSEWorker.cpp  DecodeSEWorker.h  DecodeWorker.cpp  DecodeWorker.h  Encap.cpp  Encap.h  EncodePEWorker.cpp  EncodePEWorker.h  EncodeSEWorker.cpp  EncodeSEWorker.h  EncodeWorker.cpp  EncodeWorker.h  ExtractWorker.cpp  ExtractWorker.h  FastqRead.cpp  FastqRead.h  (+42 more)
